Cleanup proyecto: eliminar archivos privados y reorganizar estructura
- Eliminar carpeta .github/ completa (archivos privados de Copilot)
- Eliminar Copilot-Processing.md (archivo temporal)
- Agregar .gitignore completo para Python/FastAPI
- Crear config.py con configuración centralizada
- Reorganizar modelos de base de datos en database/
- Actualizar requirements.txt con dependencias necesarias
- Actualizar .env.example con configuración completa
- Limpiar scraper.py para usar solo API de SIMO

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,37 @@
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
-DATABASE_URL=sqlite:///./simo.db
-PLAYWRIGHT_HEADLESS=true
+# Configuración de la aplicación
+APP_NAME="SIMO Scraper Backend"
+DEBUG=false
+
+# Configuración de la base de datos
+# Para desarrollo (SQLite)
+DATABASE_URL="sqlite:///./data/simo_empleos.db"
+# Para producción (PostgreSQL en Render)
+# DATABASE_URL="postgresql://user:password@host:port/database"
+
+# Configuración del scraper
+SIMO_API_URL="https://simo.cnsc.gov.co/empleos/ofertaPublica/"
+SCRAPER_MAX_CONCURRENT=5
+SCRAPER_DELAY_SECONDS=1.0
+SCRAPER_TIMEOUT_SECONDS=30
+SCRAPER_RETRY_ATTEMPTS=3
+
+# Configuración del scheduler
+SCHEDULER_ENABLED=true
+SCRAPER_CRON_HOUR=6
+SCRAPER_CRON_MINUTE=0
+
+# Configuración de Telegram (opcional)
+TELEGRAM_BOT_TOKEN=""
+TELEGRAM_ADMIN_CHAT_ID=""
+TELEGRAM_ENABLED=false
+
+# Configuración de seguridad
+SECRET_KEY="your-secret-key-change-in-production"
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Configuración de logs
+LOG_LEVEL="INFO"
+
+# Variables para producción (Render)
+# RENDER=true
+# PRODUCTION=true
